# ifcJSON

file_converters/: Dockerfile  docker-compose.yml  ifc2json.py  pyproject.toml
file_converters/dataset/output/: wall.json
file_converters/ifcjson/: to_ifcopenshell.py
